kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shop.158.160.5.92.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port: 
              number: 8080
        path: /
        pathType: Prefix
